--- a/03-post-process/output-plots.Rmd
+++ b/03-post-process/output-plots.Rmd
@@ -1662,6 +1662,21 @@ kable(t(est), digits = 0, format.args = list(big.mark = ",")) %>%
   kable_styling(full_width = FALSE, bootstrap_options = c("condensed", "striped"))
 ```
 
+# Migratory Strategy Apportionment
+
+```{r pi-plots, fig.width = 6, fig.height = 5}
+plot_f = function(j) {
+  plot_tseries(post_summ(post, sub_index("^pi[year,LH_type,pop]$", year = ts_yrs, LH_type = i_fall, pop = j)),
+               yrs = all_yrs[ts_yrs],
+               main = pops[j])
+}
+
+par(mfrow = c(2,2), oma = c(1.5,1.5,0,0))
+junk = sapply(1:jags_data$nj, plot_f)
+mtext(side = 1, outer = T, line = 0.25, "Brood Year")
+mtext(side = 2, outer = T, line = 0.25, "Proportion of Parr with Fall Migration Strategy")
+```
+
 # Overwinter Survival Relationships
 
 ```{r overwinter-survival-plots, fig.width = 8, fig.height = 5}
