--- a/03-post-process/output-plots.Rmd
+++ b/03-post-process/output-plots.Rmd
@@ -40,8 +40,8 @@ in_dir = "02-model/model-output"
 model_info = readRDS(file.path(in_dir, paste0("output-", params$scenario, ".rds")))
 
 # extract the two key structures from this object
-post = model_info$post
-# post = post_thin(model_info$post, keep_percent = 0.1)  # uncomment this to run document with 10% of the retained MCMC samples
+# post = model_info$post
+post = post_thin(model_info$post, keep_percent = 0.1)  # uncomment this to run document with 10% of the retained MCMC samples
 jags_data = model_info$jags_data
 ```
 
@@ -2217,6 +2217,64 @@ par(mfrow = c(1,3))
 my_boxplot(sub_index("mu_phi_Sb_Sa[pop]", pop = "."), "Average Survival", ylim = c(0,1))
 my_boxplot(sub_index("sig_Lphi_Sb_Sa[pop]", pop = "."), "Process SD")
 my_boxplot("rho_Lphi_Sb_Sa", "Among-pop Correlation", ylim = c(-1,1), ticklab = vcov_labels)
+```
+
+# Correlation Parameters
+
+```{r rho_plot, fig.width = 6, fig.height = 8}
+# get the names of all rho parameters
+# these are elements of a correlation matrix
+# but because the rho term is the same for all population pairs, it is sufficient 
+# to summarize just one element from each matrix
+rho_params = c(
+  match_params(post, "rho_.+[2,1]"),
+  match_params(post, "rho_.+[2,1,1]"),
+  match_params(post, "rho_.+[2,1,2]")
+)
+
+# calculate/format posterior summaries
+rho_summs = t(post_summ(post, rho_params, probs = c(0.025, 0.25, 0.5, 0.75, 0.975)))
+rho_summs = as.data.frame(rho_summs)
+rho_summs = cbind(param = rownames(rho_summs), rho_summs)
+rownames(rho_summs) = NULL
+
+# make prettier names for each term
+rho_names = c(
+  "rho_Lphi_E_Pb[2,1]" = "Egg-to-Parr Survival",
+  "rho_Lpi[2,1]" = "Mig. Stategy Apportionment",
+  "rho_Lphi_Ma_O0[2,1]" = "LGR to Ocean Survival",
+  "rho_Lphi_O0_O1[2,1]" = "Yr1 Ocean Survival",
+  "rho_Lphi_Rb_Ra[2,1]" = "BON to LGR Survival",
+  "rho_Lphi_Sb_Sa[2,1]" = "Pre-spawn Survival",
+  "rho_Lphi_Pa_Mb[2,1,1]" = "Overwinter Survival (Fall)",
+  "rho_Lphi_Pa_Mb[2,1,2]" = "Overwinter Survival (Spring)",
+  "rho_Lphi_Mb_Ma[2,1,1]" = "Trib to LGR Survival (NOR)",
+  "rho_Lphi_Mb_Ma[2,1,2]" = "Trib to LGR Survival (HOR)",
+  "rho_Lpsi_O1_Rb[2,1,1]" = "Age-3 Maturation (NOR)",
+  "rho_Lpsi_O1_Rb[2,1,2]" = "Age-3 Maturation (HOR)",
+  "rho_Lpsi_O2_Rb[2,1,1]" = "Age-4 Maturation (NOR)",
+  "rho_Lpsi_O2_Rb[2,1,2]" = "Age-4 Maturation (HOR)"
+  )
+rho_summs$name = rho_names[rho_summs$param]
+
+# reorder by decreasing mean correlation
+rho_summs = rho_summs[order(rho_summs$mean, decreasing = TRUE),]
+at_y = nrow(rho_summs):1
+
+# use different colors for correlations that are between origins vs. between populations
+col = ifelse(rho_summs$param %in% c("rho_Lphi_Ma_O0[2,1]", "rho_Lphi_Rb_Ra[2,1]"), "red", "black")
+
+# make the plot
+par(lend = "square", mar = c(3,10,1,1), tcl = -0.15, mgp = c(1.5,0.35,0))
+plot(1,1, type = "n", xlim = c(-1,1), ylim = c(1,nrow(rho_summs)), xlab = "Correlation", ylab = "", yaxt = "n")
+abline(v = 0, lty = 2)
+segments(rho_summs$`2.5%`, at_y, rho_summs$`97.5%`, col = col)
+segments(rho_summs$`25%`, at_y, rho_summs$`75%`, lwd = 4, col = col)
+points(y = at_y, x = rho_summs$mean, cex = 1, pch = 3, lwd = 2, col = col)
+axis(side = 2, at = at_y, labels = rho_summs$name, las = 2, cex.axis = 0.8)
+abline(h = at_y - 0.5, col = "grey")
+legend("topleft", legend = c("Across Populations", "Across Origins"), text.col = c("black", "red"), bty = "n", cex = 0.8)
+box()
 ```
 
 # JAGS Model and Data {.tabset .tabset-pills}
