--- a/03-post-process/compare-sim-to-obs.Rmd
+++ b/03-post-process/compare-sim-to-obs.Rmd
@@ -30,8 +30,8 @@ in_dir = "02-model/model-output"
 model_info = readRDS(file.path(in_dir, paste0("output-", params$scenario, ".rds")))
 
 # extract the two key structures from this object
-# post = model_info$post                               # full posterior takes a long time to run on this script
-post = post_thin(model_info$post, keep_percent = 0.05)  # uncomment this to run document with 5% of the retained MCMC samples
+post = model_info$post                               # full posterior takes a long time to run on this script
+# post = post_thin(model_info$post, keep_percent = 0.05)  # uncomment this to run document with 5% of the retained MCMC samples
 jags_data = model_info$jags_data
 ```
 
