--- a/03-post-process/compare-sim-to-obs.Rmd
+++ b/03-post-process/compare-sim-to-obs.Rmd
@@ -1,12 +1,20 @@
 ---
 title: "Observed vs. Simulated Year Comparison"
 subtitle: "`r paste0('Model Scenario: ', params$scenario)`"
-output: html_document
+date: "`r paste0('Date Rendered: ', Sys.Date())`"
+output:
+   html_document:
+    toc: true
+    toc_float: true
 params:
   scenario:
     label: "Scenario"
     value: "base"
     input: text
+  thin_percent:
+    label: "Proportion of Posterior Samples to Retain?"
+    value: 1
+    input: numeric
 editor_options: 
   chunk_output_type: console
 ---
@@ -29,9 +37,15 @@ in_dir = "02-model/model-output"
 # read information from this model
 model_info = readRDS(file.path(in_dir, paste0("output-", params$scenario, ".rds")))
 
-# extract the two key structures from this object
-post = model_info$post                               # full posterior takes a long time to run on this script
-# post = post_thin(model_info$post, keep_percent = 0.05)  # uncomment this to run document with 5% of the retained MCMC samples
+# extract the posterior samples
+# post-MCMC thinning allowed to reduce run time of this document
+if (params$thin_percent < 1) {
+  post = post_thin(model_info$post, keep_percent = params$thin_percent)
+} else {
+  post = model_info$post
+}
+
+# extract the model data 
 jags_data = model_info$jags_data
 ```
 
