--- a/03-post-process/output-plots.Rmd
+++ b/03-post-process/output-plots.Rmd
@@ -993,9 +993,10 @@ mtext(side = 2, outer = T, line = 0.25, TeX("$Fall\\,Parr \\rightarrow LGR\\,Sur
 
 ```{r winter-surv-fit, fig.width = 6, fig.height = 5}
 plot_f = function(j) {
-  plot_tseries(post_summ(post, sub_index("^phi_Pa_Ma[year,LH_type,pop]$", year = observable, LH_type = i_spring, pop = j)),
+  plot_tseries(post_summ(post, sub_index("^phi_Pa_Ma[year,LH_type,pop]$", year = ts_yrs, LH_type = i_spring, pop = j)),
                get_obs_ests_logit_normal(jags_data$Lphi_obs_Pa_Ma[observable,i_spring,j], jags_data$sig_Lphi_obs_Pa_Ma[observable,i_spring,j]),
-               main = pops[j])
+               main = pops[j],
+               yrs = all_yrs[ts_yrs])
 }
 
 par(mfrow = c(2,2), oma = c(1.5,1.5,0,0))
@@ -1396,9 +1397,9 @@ carc_comp_fit_plot = function(j) {
   plot_tseries(post_summ(post, sub_index("^p_Sa_prime[year,1,pop]$", pop = j, year = ts_yrs)), get_obs_ests_multinomial(jags_data$x_Sa_prime[observable,,j], 1), main = TeX("$Age\\,3\\,(NOR)$"), yrs = all_yrs[ts_yrs])
   plot_tseries(post_summ(post, sub_index("^p_Sa_prime[year,2,pop]$", pop = j, year = ts_yrs)), get_obs_ests_multinomial(jags_data$x_Sa_prime[observable,,j], 2), main = TeX("$Age\\,4\\,(NOR)$"), yrs = all_yrs[ts_yrs])
   plot_tseries(post_summ(post, sub_index("^p_Sa_prime[year,3,pop]$", pop = j, year = ts_yrs)), get_obs_ests_multinomial(jags_data$x_Sa_prime[observable,,j], 3), main = TeX("$Age\\,5\\,(NOR)$"), yrs = all_yrs[ts_yrs])
-  plot_tseries(post_summ(post, sub_index("^p_Sa_prime[year,4,pop]$", pop = j, year = ts_yrs)), get_obs_ests_multinomial(jags_data$x_Sa_prime[observable,,j], 4), main = TeX("$Age\\,3\\,(NOR)$"), yrs = all_yrs[ts_yrs])
-  plot_tseries(post_summ(post, sub_index("^p_Sa_prime[year,5,pop]$", pop = j, year = ts_yrs)), get_obs_ests_multinomial(jags_data$x_Sa_prime[observable,,j], 5), main = TeX("$Age\\,4\\,(NOR)$"), yrs = all_yrs[ts_yrs])
-  plot_tseries(post_summ(post, sub_index("^p_Sa_prime[year,6,pop]$", pop = j, year = ts_yrs)), get_obs_ests_multinomial(jags_data$x_Sa_prime[observable,,j], 6), main = TeX("$Age\\,5\\,(NOR)$"), yrs = all_yrs[ts_yrs])
+  plot_tseries(post_summ(post, sub_index("^p_Sa_prime[year,4,pop]$", pop = j, year = ts_yrs)), get_obs_ests_multinomial(jags_data$x_Sa_prime[observable,,j], 4), main = TeX("$Age\\,3\\,(HOR)$"), yrs = all_yrs[ts_yrs])
+  plot_tseries(post_summ(post, sub_index("^p_Sa_prime[year,5,pop]$", pop = j, year = ts_yrs)), get_obs_ests_multinomial(jags_data$x_Sa_prime[observable,,j], 5), main = TeX("$Age\\,4\\,(HOR)$"), yrs = all_yrs[ts_yrs])
+  plot_tseries(post_summ(post, sub_index("^p_Sa_prime[year,6,pop]$", pop = j, year = ts_yrs)), get_obs_ests_multinomial(jags_data$x_Sa_prime[observable,,j], 6), main = TeX("$Age\\,5\\,(HOR)$"), yrs = all_yrs[ts_yrs])
   mtext(side = 1, outer = T, line = 0.25, "Return Year")
   mtext(side = 2, outer = T, line = 0.25, "Proportion of Carcasses")
 }
@@ -1925,7 +1926,7 @@ plot_fn = function(j) {
   lines(Ra_per_Ma_hor["mean",] ~ all_yrs[sar_yrs], col = "blue", lwd = 2)
 
   if (j == 1) {
-    legend("topright", legend = c("NOR", "HOR"), title = "Origin",
+    legend("topright", legend = origins, title = "Origin",
          pch = 22, col = c("red", "blue"), pt.cex = 2, pt.bg = alpha(c("salmon", "skyblue2"), 0.5), bty = "n")
   }
 }
@@ -1962,7 +1963,7 @@ plot_fn = function(j) {
   lines(phi_hor["mean",] ~ all_yrs[sar_yrs], col = "blue", lwd = 2)
 
   if (j == 1) {
-    legend("topright", legend = c("NOR", "HOR"), title = "Origin",
+    legend("topright", legend = origins, title = "Origin",
          pch = 22, col = c("red", "blue"), pt.cex = 2, pt.bg = alpha(c("salmon", "skyblue2"), 0.5), bty = "n")
   }
 }
@@ -2233,8 +2234,8 @@ my_boxplot(sub_index("rho_Lphi_Mb_Ma[.,.,origin]", origin = o_hor), "Among-pop C
 
 ```{r lgr-to-ocean-bxp}
 par(mfrow = c(1,3))
-my_boxplot(sub_index("mu_phi_Ma_O0[origin]", origin = "."), "Average Migration Survival", ylim = c(0,1), ticklab = c("NOR", "HOR"))
-my_boxplot(sub_index("sig_Lphi_Ma_O0[origin]", origin = "."), "Process SD", ylim = c(0,1), ticklab = c("NOR", "HOR"))
+my_boxplot(sub_index("mu_phi_Ma_O0[origin]", origin = "."), "Average Migration Survival", ylim = c(0,1), ticklab = origins)
+my_boxplot(sub_index("sig_Lphi_Ma_O0[origin]", origin = "."), "Process SD", ylim = c(0,1), ticklab = origins)
 my_boxplot(sub_index("rho_Lphi_Ma_O0[2,1]"), "Among-origin Correlation", ylim = c(-1,1), ticklab = c(""))
 ```
 
@@ -2339,8 +2340,8 @@ my_boxplot(sub_index("delta[pop]", pop = "."), ylab = "Log Odds Ratio")
 
 ```{r bon-to-lgr-bxp}
 par(mfrow = c(1,3))
-my_boxplot(sub_index("mu_phi_Rb_Ra[origin]", origin = "."), "Average Migration Survival", ylim = c(0,1), ticklab = c("NOR", "HOR"))
-my_boxplot(sub_index("sig_Lphi_Rb_Ra[origin]", origin = "."), "Process SD", ticklab = c("NOR", "HOR"))
+my_boxplot(sub_index("mu_phi_Rb_Ra[origin]", origin = "."), "Average Migration Survival", ylim = c(0,1), ticklab = origins)
+my_boxplot(sub_index("sig_Lphi_Rb_Ra[origin]", origin = "."), "Process SD", ticklab = origins)
 my_boxplot(sub_index("rho_Lphi_Rb_Ra[2,1]"), "Among-origin Correlation", ylim = c(-1,1), ticklab = c(""))
 ```
 
@@ -2355,7 +2356,7 @@ my_boxplot("rho_Lphi_Sb_Sa", "Among-pop Correlation", ylim = c(-1,1), ticklab = 
 
 # Correlation Parameters
 
-```{r rho_plot, fig.width = 6, fig.height = 8}
+```{r rho_plot, fig.width = 6, fig.height = 7}
 # get the names of all rho parameters
 # these are elements of a correlation matrix
 # but because the rho term is the same for all population pairs, it is sufficient 
@@ -2375,7 +2376,7 @@ rownames(rho_summs) = NULL
 # make prettier names for each term
 rho_names = c(
   "rho_Lphi_E_Pb[2,1]" = "Egg-to-Parr Survival",
-  "rho_Lpi[2,1]" = "Mig. Stategy Apportionment",
+  "rho_Lpi[2,1]" = "Mig. Strategy Apportionment",
   "rho_Lphi_Ma_O0[2,1]" = "LGR to Ocean Survival",
   "rho_Lphi_O0_O1[2,1]" = "Yr1 Ocean Survival",
   "rho_Lphi_Rb_Ra[2,1]" = "BON to LGR Survival",
