--- a/03-post-process/output-plots.Rmd
+++ b/03-post-process/output-plots.Rmd
@@ -9,7 +9,7 @@ output:
 params:
   scenario:
     label: "Scenario"
-    value: "base"
+    value: "size-based-surv"
     input: text
   include_sim_years:
     label: "Include Simulated Years on Plots?"
